--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,13 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= form.label : title %>
-    <%= form.text_field : title, id: :product_ title %>
+    <%= form.label :title %>
+    <%= form.text_field :title, id: :product_title %>
   </div>
 
   <div class="field">
     <%= form.label :description %>
-    <%= form.text_area :description, id: :product_description %>
+    <%= form.text_area :description, id: :product_description, rows: 10, cols:60 %>
   </div>
 
   <div class="field">
