tried to bugfix the image upload function

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -22,9 +22,12 @@
   </div>
 
   <div class="field">
-    <%= form.label :image_url %>
-    <%= form.text_field :image_url, id: :product_image_url %>
-  </div>
+
+      <%= form.label :image_url %>
+
+      <%= form.file_field :image_url, id: :product_image_url %>
+</div>
+
 
   <div class="field">
     <%= form.label :price %>
