--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,9 +11,13 @@
 </p>
 
 <p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
+    <strong>Image url:</strong>
+
+    <%= image_tag(@product.image_url.url, width:
+    600) if
+    @product.image_url.present? %>
 </p>
+
 
 <p>
   <strong>Price:</strong>
