--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -5,7 +5,7 @@
 <ul class="catalog">
 <% @products.each do |product| %>
 <li>
-<%= image_tag product.image_url.url, width: '100%' if product.image_url.present? %>
+<%= image_tag (product.image_url.url) %>
 <h2><%= product.title %></h2>
 <p>
 <%= sanitize(product.description) %> </p>
