--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -9,6 +9,9 @@
 <h2><%= product.title %></h2>
 <p>
 <%= sanitize(product.description) %> </p>
-<div class="price"> <%= product.price %>
+
+  <div class="price">
+<%= number_to_currency(product.price) %>
+
 </div> </li>
 <% end %> </ul>
