--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -9,7 +9,8 @@
                     padding: 0;
                     margin: 0;
                     li {
-                      padding: 4em;
+                      padding: 1em;
+                      padding-bottom: 1em;
                       margin: 0;
                       border-bottom: solid thin #ddd;
 // This makes sure our <li> has enough height // to hold the entire image, since it's floated &::after {
