--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -22,6 +22,8 @@
         display: block;
       }
       img {
+        width: 147px;
+        height: 176px;
         float: left;
         padding: 1em;
         margin-right: 1em;
