--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,7 @@
 <p>
     <strong>Image url:</strong>
 
-    <%= image_tag(@product.image_url.url, width:
+    <%= image_tag(@product.image_url, width:
     600) if
     @product.image_url.present? %>
 </p>
