--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,3 +1,4 @@
+
 <% if notice %>
 <aside id="notice"><%= notice %></aside>
 <% end %>
@@ -6,8 +7,11 @@
   <div class="notice"><%= flash[:index] %></div>
 <% end %>
 <h1>Your Pragmatic Catalog</h1>
-
-
+<div id="Boo"></div>
+<%= content_tag :div,
+  id: "books",
+  data: @products.count.to_json do %>
+<% end %>
 
 <ul class="catalog">
 <% @products.each do |product| %>
