attempting to fix error in index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,10 @@
       <nav class="side_nav">
       <ul>
         <li><%= link_to "Home", store_index_path(spa: false) %></li>
-  <li><%= link_to "Home (SPA)", store_index_path(spa: true) %></li>
-      <li><a href="/questions">Questions</a></li> <li><a href="/news">News</a></li>
-      <li><a href="/contact">Contact</a></li>
-      <li><%= link_to "My Cart", cart_path(session[:cart_id]) %></li>
+        <li><%= link_to "Home (SPA)", store_index_path(spa: true) %></li>
+        <li><a href="/questions">Questions</a></li> <li><a href="/news">News</a></li>
+        <li><a href="/contact">Contact</a></li>
+        <li><%= link_to "My Cart", cart_path(:cart_id) %></li>
       </ul>
     </nav>
 
